Improve packaging with jpackage